--- a/citizenship.html
+++ b/citizenship.html
@@ -6,6 +6,7 @@
 
 <body>
   <h1>Citizenship!</h1>
+<p style="text-align:center;"><img src="images.png" width="300px"</p>
   <p>Welcome to my page</p>
   <h2>Anser to queston 1</h2>
   <p>I believe that honesty, compassion, respect, responsibility, and courage
@@ -15,8 +16,9 @@
   comunety whene it needs it, and you must have the curege to stand up to people.</p>
   <h2>Anser to queston 2</h2>
   <p>One other thing that makes a good citizen is knolige because you must know
-  what is going on in the comunity and acted onit if you can or tell others about
+  what is going on in the comunity and acted on it if you can or tell others about
   it.</p>
-
+  <h2>Anser to queston 3</h2>
+  <p>An act of citizenship I have </p>
 </body>
 </html>
