--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
   <h1>A link to my website</h1>
   <p>here you go</p>
 <a href="citizenship.html">Citizenship</a>
+<a href="Images/index.html">images</a>
+<a href="Images/Images_format.html">image formats</a>
 </body>
 </html>
