--- a/contract.html
+++ b/contract.html
@@ -1,6 +1,7 @@
 <html>
+<head>
+</head>
 <body>
-</body>
 <h1>I, David, understand that I will be given my own personal website.
 I understand that anything I post on this site can be accessed and seen on any computer connected to the World Wide Web.
 While in this class I will use the web responsibly. Anything I post on my site will contain only content appropriate for the L-S Web Server.
@@ -11,4 +12,5 @@ My ability to abide by this contract will be partially reflected in my Web Publi
 Signed,
 
 David</h1>
+</body>
 </html>
