--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <a href="citizenship.html">Citizenship</a>
 <a href="Images/index.html">images</a>
 <a href="Images/Images_format.html">image formats</a>
+<a href="contract.html">Contract</a>
 </body>
 </html>
