--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <a href="Images/index.html">images</a>
 <a href="Images/Images_format.html">image formats</a>
 <a href="contract.html">Contract</a>
+<a href="story/story.html">story</a>
 </body>
 </html>
