--- a/buy.html
+++ b/buy.html
@@ -15,7 +15,7 @@
       <div class="row">
        <div class="col">
          <nav class="navbar navbar-expand-lg navbar-light bg-light">
-           <a class="navbar-brand" href="index.html">David's store</a>
+           <a class="navbar-brand" href="#">David's store</a>
            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
              <span class="navbar-toggler-icon"></span>
            </button>
@@ -30,68 +30,51 @@
                    Opptions
                  </a>
                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                   <a class="dropdown-item" href="shop.html">Shop</a>
+                   <a class="dropdown-item" href="shop.html">shop</a>
                  </div>
                </li>
              </ul>
            </div>
          </nav>
-         </div>
-        </div>
-       <div class="row">
-        <div class="col">
-          <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                  <img src="cube.jpg" class="d-block w-50" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="ring.jpg" class="d-block w-50" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="game.jpg" class="d-block w-50" alt="...">
-              </div>
-            </div>
-          </div>
-         </div>
-        </div>
-        <div class="row">
-         <div class="col">
-           <div class="card" style="width: 18rem;">
-             <img src="game.jpg" class="card-img-top">
-             <div class="card-body">
-               <h5 class="card-title">Game fidgeter</h5>
-               <p class="card-text">this one looks like a video game controler</p>
-               <a href="shop.html" class="btn btn-primary">Shop</a>
-             </div>
-           </div>
-         </div>
-       </div>
-       <div class="row">
-        <div class="col">
-          <div class="card" style="width: 18rem;">
-            <img src="cube.jpg" class="card-img-top">
-            <div class="card-body">
-              <h5 class="card-title">Cube fidgeter</h5>
-              <p class="card-text">The origenal</p>
-              <a href="shop.html" class="btn btn-primary">Shop</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-       <div class="col">
-         <div class="card" style="width: 18rem;">
-           <img src="ring.jpg" class="card-img-top">
-           <div class="card-body">
-             <h5 class="card-title">Ring fidgeter</h5>
-             <p class="card-text">this one can fit on your finger</p>
-             <a href="shop.html" class="btn btn-primary">Shop</a>
-           </div>
-         </div>
        </div>
      </div>
+     <div class="row">
+      <div class="col">
+     <div class="card" style="width: 18rem;">
+       <img src="game.jpg" class="card-img-top" alt="...">
      </div>
+   </div>
+ </div>
+     <div class="row">
+      <div class="col">
+     <div class="input-group mb-3">
+  <div class="input-group-prepend">
+    <span class="input-group-text">$</span>
+    <span class="input-group-text">1.50</span>
+  </div>
+</div>
+</div>
+</div>
+<div class="row">
+ <div class="col">
+<div class="card" style="width: 18rem;">
+  <img src="cube.jpg" class="card-img-top" alt="...">
+</div>
+</div>
+</div>
+<div class="row">
+ <div class="col">
+<div class="input-group mb-3">
+<div class="input-group-prepend">
+<span class="input-group-text">$</span>
+<span class="input-group-text">1.00</span>
+</div>
+</div>
+</div>
+</div>
+   </div>
+
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
