--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                  </a>
                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                    <a class="dropdown-item" href="shop.html">Shop</a>
+                   <a class="dropdown-item" href="old_index.html">index</a>
                  </div>
                </li>
              </ul>
